--- a/Tugas-HTML/tugas-typography/index.html
+++ b/Tugas-HTML/tugas-typography/index.html
@@ -15,7 +15,7 @@
     <main>
       <article class="box">
         <h2>Menata Semangat di Dunia Ilmu</h2>
-        <p>
+        <p class="playwrite-paragfar">
           Dalam dunia <b>pendidikan dan dakwah</b>, belajar bukan sekadar
           menghafal, tapi juga membentuk karakter dan akhlak. Dengan semangat
           dan niat yang ikhlas, setiap huruf ilmu menjadi cahaya yang menerangi
