--- a/Tugas-HTML/tugas-typography/index.html
+++ b/Tugas-HTML/tugas-typography/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body class="container">
-    <header>
+    <header class="playwrite">
       <h1>semangat belajar santri</h1>
       <h4>HSI Boarding School - Artikel Mingguan</h4>
     </header>
