--- a/Tugas-HTML/Real App UI Component/coba.html
+++ b/Tugas-HTML/Real App UI Component/coba.html
@@ -12,7 +12,7 @@
   </head>
   <body>
     <div class="container">
-      <h1>Tugas 4: Real App UI Component</h1>
+      <h1>Tugas 5: Real App UI Component</h1>
       <hr />
       <br />
       <div class="box">
@@ -53,7 +53,7 @@
       <!-- Profile card end -->
 
       <div class="box">
-        <h2 class="subjudul">2.Resonsive Pricing Cards (Flexbox)</h2>
+        <h2 class="subjudul">3.Responsive Pricing Cards (Flexbox)</h2>
         <hr />
         <div class="flexbox-area">
           <div class="card">
